--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19",
@@ -76,14 +76,13 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "prisma": "^6.15.0",
+    "tailwindcss": "^3.4.15",
     "tsx": "^4.20.5",
-    "tw-animate-css": "1.3.3",
     "typescript": "^5"
   },
   "prisma": {
