--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "^15.5.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19",
